--- a/KITS/templates/registration/login.html
+++ b/KITS/templates/registration/login.html
@@ -14,7 +14,7 @@
             <p>
             Welcome to the Kit Inventory Tracking System!
             </p>
-        <form method="FORM" class=""form-group">
+        <form method="FORM" class="form-group">
         {% csrf_token %}
         <button type="submit" class="btn btn-success" >Login</button>
 
