--- a/KITS/static/css/styles.css
+++ b/KITS/static/css/styles.css
@@ -37,3 +37,33 @@
   opacity: 1;
   right: 0;
 }
+
+.topnav {
+    background-color: powderblue;
+    overflow: hidden;
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #050520;
+    text-align: center;
+    padding: 14px 26px;
+    text-decoration: none;
+    font-size: 22px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4caf50;
+  color: white;
+}
