--- a/KITS/templates/KITS/base.html
+++ b/KITS/templates/KITS/base.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
-<style>
+<!-- <style> Temporarily commenting out and moving to styles.css
     .topnav {
     background-color: powderblue;
     overflow: hidden;
@@ -19,7 +17,7 @@
     text-align: center;
     padding: 14px 26px;
     text-decoration: none;
-    font: ;
+    {# font: ; commenting out until used #}
     font-size: 22px;
 }
 
@@ -35,15 +33,16 @@
   color: white;
 }
 
-
-
-
-
-
-</style>
+</style> -->
 
 <head>
-    <title>KITS</title>
+    {% block title %}<title>Local Library</title>{% endblock %}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- Add additional CSS in static file -->
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
 <body>
@@ -54,15 +53,11 @@
           <a href="{% url 'KITS:home' %}">Check-In Kits</a>
           <a href="{% url 'KITS:home' %}">Check-Out Kits</a>
           <a href="{% url 'KITS:home' %}">Reports</a>
-          <a href="{% url 'KITS:login' %}" style="float:right">Logout</a></li>
-
+          <a href="{% url 'KITS:login' %}" style="float:right">Logout</a>
     </div>
 
-{% block content %}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 
-</body>
-
-
-
+    </body>
 </html>
