Corrected static CSS reference

--- a/KITS/templates/registration/login.html
+++ b/KITS/templates/registration/login.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="../templates/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="../../static/css/styles.css" type="text/css" rel="stylesheet"/>
     <title> KITS Login</title>
 </head>
     <body>
