Corrected weak errors from PyCharm

--- a/KITS/templates/KITS/home.html
+++ b/KITS/templates/KITS/home.html
@@ -6,7 +6,7 @@
 
 <style>
     .studynav {
-    background-color: ##FFFFFF;
+    background-color: #FFFFFF;
     overflow: hidden;
     padding-top: 15px;
 
@@ -19,7 +19,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font: ;
+    {# font: ; commenting out until used #}
     font-size: 15px;
 
 }
@@ -36,7 +36,6 @@
   color: white;
 }
 
-}
 </style>
     <title>Studies</title>
     <body>
