Proofread readable content and tweaked button styles

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,7 +19,7 @@
 
         </form>
 
-        <p><a class="btn btn-default" href="{% url 'KITS:home' %}"
+        <p><a class="btn btn-info" href="{% url 'KITS:home' %}"
                                            role="button">Login Link #2</a></p>
 
         {# Link to reset password. #}
