--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,10 @@
 {% extends "KITS/base.html" %}
 
 {% block content %}
-  <h1>The password has been changed!</h1>
-  <p><a href="{% url 'login' %}">log in again?</a></p>
+  <h2>Password Change Complete</h2>
+    <p>Your password was successfully reset!</p>
+    <p>
+        <a class="btn btn-success" href="{% url 'login' %}" role="button">Log Back In</a>
+        <a class="btn btn-info" href="{% url '' %}" role="button">Log Back In</a>
+    </p>
 {% endblock %}
