--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     {% if validlink %}
+        <h2>Change Password</h2>
         <p>Please enter (and confirm) your new password.</p>
         <form action="" method="post">
         {% csrf_token %}
@@ -23,7 +24,7 @@
             </table>
         </form>
     {% else %}
-        <h1>Password reset failed</h1>
+        <h2>Password Reset Failed</h2>
         <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
     {% endif %}
 {% endblock %}
