--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,6 @@
 {% extends "KITS/base.html" %}
 
 {% block content %}
-  <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
+    <h2>Password Change Sent</h2>
+  <p>We've emailed you instructions to reset your password. If it hasn't arrived in a few minutes, check your spam folder.</p>
 {% endblock %}
