--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,2 +1,5 @@
-Someone asked for password reset for email {{ email }}. Follow the link below:
+Someone asked for a password reset for the account with email "{{ email }}". Follow this link to reset it:
+
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+
+If you did not authorize this password reset request, contact the site administrator immediately.
