--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -6,8 +6,9 @@
   {% if form.email.errors %}
     {{ form.email.errors }}
   {% endif %}
+    <h2>Password Reset</h2>
     <p>Please enter an email to send confirmation of your password reset.</p>
       <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Send Password Reset Email">
+    <input type="submit" class="btn btn-info" value="Send Password Reset Email">
   </form>
 {% endblock %}
