study URLs, view, and HTML framework added.

--- a/templates/KITS/home.html
+++ b/templates/KITS/home.html
@@ -42,7 +42,9 @@
 
             <div class="studynav">
               <a href="{% url 'KITS:home' %}">Current Studies</a>
-              <a href="{% url 'KITS:home' %}">Create Study</a>
+              <a href="{% url 'KITS:study' %}">Create Study</a>
+
+
               <a href="{% url 'KITS:home' %}">Review Non-Active Studies</a>
               <a href="{% url 'KITS:home' %}">Review Kit Shortages</a>
               <a href="{% url 'KITS:home' %}">Review Expired Kits</a>
