study URLs, view, and HTML framework added.

--- a/templates/KITS/study.html
+++ b/templates/KITS/study.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% extends 'KITS/base.html' %}
-<p>test</p>
+{% block content %}
+<H1>test</H1>
+
+{% endblock content %}
