--- a/templates/KITS/study.html
+++ b/templates/KITS/study.html
@@ -1,7 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base.html' %}
-{% block content %}
-<H1>test</H1>
 
+{% extends 'KITS/home.html' %}
+{% block content %}
+
+<style>
+    .studynav {
+    background-color: #FFFFFF;
+    overflow: hidden;
+    padding-top: 15px;
+
+}
+
+/* Style the links inside the navigation bar */
+.studynav a {
+    float: left;
+    color: #050520;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    {# font: ; commenting out until used #}
+    font-size: 15px;
+
+}
+
+/* Change the color of links on hover */
+.studynav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.studynav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+</style>
+    <title>Studies</title>
+    <body>
+
+            <div class="studynav">
+              <a href="{% url 'KITS:home' %}">Current Studies</a>
+              <a href="{% url 'KITS:study' %}">Create Study</a>
+
+
+              <a href="{% url 'KITS:home' %}">Review Non-Active Studies</a>
+              <a href="{% url 'KITS:home' %}">Review Kit Shortages</a>
+              <a href="{% url 'KITS:home' %}">Review Expired Kits</a>
+              <input type="text" style="float:right" placeholder="Search for a study..">
+
+            </div>
+            <hr>
+
+            <H1>Create Study</H1>
+
+    </body>
 {% endblock content %}
+
+</html>
