--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -1,59 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- <style> Temporarily commenting out and moving to styles.css
-    .topnav {
-    background-color: powderblue;
-    overflow: hidden;
-    border-style: solid;
-    border-radius: 5px;
-    border-width: 1px;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    color: #050520;
-    text-align: center;
-    padding: 14px 26px;
-    text-decoration: none;
-    {# font: ; commenting out until used #}
-    font-size: 22px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-</style> -->
-
 <head>
     {% block title %}<title>KITS - Kit Inventory Tracking System</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
 <body>
-
-    <h1><center>KITS  |  Kit Inventory Tracking System</center></h1>
+    <h1 style="text-align:center">KITS  |  Kit Inventory Tracking System</h1>
     <div class="topnav">
-          <a href="{% url 'KITS:home' %}">Studies</a>
-          <a href="{% url 'KITS:home' %}">Check-In Kits</a>
-          <a href="{% url 'KITS:home' %}">Check-Out Kits</a>
-          <a href="{% url 'KITS:home' %}">Reports</a>
-          <a href="{% url 'KITS:login' %}" style="float:right">Logout</a>
+        <a href="{% url 'KITS:home' %}">Home</a>
+        <a href="{% url 'KITS:study' %}">Studies</a>
+        <a href="{% url 'KITS:home' %}">Check-In Kits</a>
+        <a href="{% url 'KITS:home' %}">Check-Out Kits</a>
+        <a href="{% url 'KITS:home' %}">Reports</a>
+
+        {# Tests for user authenticated to show appropriate login/logout link #}
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}?next={{request.path}}" style="float:right">Log Out</a>
+            <a style="float:right">Welcome, {{ user.get_username }}.</a>
+        {% else %}
+            <a href="{% url 'login' %}?next={{request.path}}" style="float:right">Log In</a>
+        {% endif %}
     </div>
 
     {% block content %}
