Added missing tag

--- a/templates/KITS/study.html
+++ b/templates/KITS/study.html
@@ -58,7 +58,7 @@
             </div>
             <hr>
             <div class="box">
-                <H1><b style="font-size: .75em;">Create Study</H1>
+                <H1><b style="font-size: .75em;">Create Study</b></H1>
 
 
             </div>
