More create study framework and HTML

--- a/templates/KITS/study.html
+++ b/templates/KITS/study.html
@@ -35,11 +35,11 @@
   background-color: #4CAF50;
   color: white;
 }
-.box a:hover{
-  width: 300px;
-  border: 15px;
-  padding: 50px;
-  margin: 20px;
+.box {
+    margin: 8px;
+    border: 1px solid silver;
+    padding: 8px;
+    border-radius: 4px;
 }
 
 </style>
@@ -59,6 +59,8 @@
             <hr>
             <div class="box">
                 <H1><b style="font-size: .75em;">Create Study</b></H1>
+                <hr>
+
 
 
             </div>
