More create study framework and HTML

--- a/templates/KITS/study.html
+++ b/templates/KITS/study.html
@@ -60,6 +60,7 @@
             <div class="box">
                 <H1><b style="font-size: .75em;">Create Study</b></H1>
                 <hr>
+                    <p>test</p>
 
 
 
