--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <!-- Add additional CSS in static file -->
-  {% load static %}
+    {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}">
 </head>
 
 <body>
-    <h1 style="text-align:center">KITS  |  Kit Inventory Tracking System</h1>
+    <h1 class="text-center">KITS  |  Kit Inventory Tracking System</h1>
     <div class="topnav">
         <a href="{% url 'KITS:home' %}">Home</a>
         <a href="{% url 'KITS:study' %}">Studies</a>
