More create study framework and HTML

--- a/templates/KITS/studies.html
+++ b/templates/KITS/studies.html
@@ -15,8 +15,8 @@
     <hr>
     <p>list all studies here with a filter for active/inactive etc.</p>
 
-    <td><a href="{% url 'KITS:create_study'}"
-                           class="btn">Add a Study</a></td>
+    <td><a href="{% url 'KITS:create_study' %}"
+        class="btn btn-warning">Create a Study</a></td>
 
 {% endblock %}
 
