--- a/templates/KITS/studies.html
+++ b/templates/KITS/studies.html
@@ -18,6 +18,30 @@
     <td><a href="{% url 'KITS:create_study' %}"
         class="btn btn-warning">Create a Study</a></td>
 
+    <div>
+        <table class="table table-striped table-bordered table-hover">
+            <thead>
+            <tr class="bg-info">
+                <th>IRB</th>
+                <th>Pet Name</th>
+                <th>Study Status</th>
+                <th colspan="3">Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for study in studies %}
+                <tr>
+                    <td>{{ study.IRB_number }}</td>
+                    <td>{{ study.pet_name }}</td>
+                    <td>{{ study.status }}</td>
+
+                    <td><a href="">Review</a>
+
+                    <td><a href="">Edit Study</a>
+                    </td>
+
+                </tr>
+    {% endfor %}
 {% endblock %}
 
 </html>
