Renamed study list and study detail templates for clarity, added closing tags for study list page for proper table iteration and div blocks.

--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -17,7 +17,7 @@
     <h1 class="text-center">KITS  |  Kit Inventory Tracking System</h1>
     <div class="topnav">
         <a href="{% url 'KITS:home' %}">Home</a>
-        <a href="{% url 'KITS:study' %}">Studies</a>
+        <a href="{% url 'KITS:study_list' %}">Studies</a>
         <a href="{% url 'KITS:home' %}">Check-In Kits</a>
         <a href="{% url 'KITS:home' %}">Check-Out Kits</a>
         <a href="{% url 'KITS:home' %}">Reports</a>
