--- a/templates/KITS/study_list.html
+++ b/templates/KITS/study_list.html
@@ -11,14 +11,9 @@
 }
     </style>
     <div class="box">
-    <H1><b style="font-size: .75em;">Studies</b></H1>
-    <hr>
-    <p>list all studies here with a filter for active/inactive etc.</p>
-
-    <td><a href="{% url 'KITS:create_study' %}"
-        class="btn btn-warning">Create a Study</a></td>
-
-    <div>
+        <H1><b style="font-size: .75em;">Studies</b></H1>
+        <hr>
+        <p>List all studies here with a filter for active/inactive etc.</p>
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
@@ -30,18 +25,18 @@
             </thead>
             <tbody>
             {% for study in studies %}
-                <tr>
-                    <td>{{ study.IRB_number }}</td>
-                    <td>{{ study.pet_name }}</td>
-                    <td>{{ study.status }}</td>
-
-                    <td><a href="">Review</a>
-
-                    <td><a href="">Edit Study</a>
-                    </td>
-
-                </tr>
-    {% endfor %}
+            <tr>
+                <td>{{ study.IRB_number }}</td>
+                <td>{{ study.pet_name }}</td>
+                <td>{{ study.status }}</td>
+                <td><a class="btn btn-info" href="">Review</a></td>
+                <td><a class="btn btn-warning" href="">Edit Study</a></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    <a href="{% url 'KITS:create_study' %}" class="btn btn-success">Create a Study</a>
+    </div>
 {% endblock %}
 
 </html>
