--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -11,17 +11,42 @@
 }
     </style>
     <div class="box">
-    <H1><b style="font-size: .75em;">Study: {{ study }}</b></H1>
+    <H1><b style="font-size: .75em;">Study: {{ study }} {{ study.pet_name }}</b></H1>
     <hr>
     <p>list all details about a specific study</p>
 
         <table class="table table-striped table-bordered table-hover">
-        <thead>
+            <thead>
+                <tr class="bg-info">
+                    <th>Status: {{ study.status }}</th>
+                </tr>
+            </thead>
+        </table>
+
+
+    <h3 style="padding-left: 15Px">Kit Information</h3>
+
+        <table class="table table-striped table-bordered table-hover">
+            <thead>
             <tr class="bg-info">
-                <th>Status: {{ status }}</th>
+                <th>Kit</th>
+                <th>Quantity</th>
+
             </tr>
-        </thead>
-    </table>
+            </thead>
+            <tbody>
+            {% for kit in kits %}
+                <tr>
+                    <td>{{ kit.type_name }}</td>
+                    <td> {{ kitinstance }}</td>
+                </tr>
+
+
+            </tbody>
+        </table>
+        <p>Kit Ordering: {{ kit_order }}</p>
+        <p>Requisition: </p>
+    {% endfor %}
     </div>
 {% endblock %}
 
