--- a/templates/KITS/study_list.html
+++ b/templates/KITS/study_list.html
@@ -15,14 +15,12 @@
         <hr>
         <p>List all studies here with a filter for active/inactive etc.</p>
 
-        <form action="{%  url 'KITS:study_list' %}" method="get">
-            <label for="status">Filter by Status</label>
-            <select name="status">
-                {% for status in typeList %}
-                    <option value="{{ status }}">{{ status }}</option>
-                {% endfor %}
-            </select>
+
+        <form method="get">
+           {{ myFilter.form }}
+            <button class="btn btn-primary" type="submit">Search</button>
         </form>
+
 
         <table class="table table-striped table-bordered table-hover">
             <thead>
@@ -39,7 +37,7 @@
                 <td>{{ study.IRB_number }}</td>
                 <td>{{ study.pet_name }}</td>
                 <td>{{ study.status }}</td>
-                <td><a class="btn btn-info" href="">View Details</a>
+                <td><a href="{% url 'KITS:study_detail' pk=study.pk %}" class="btn btn-warning">View Details</a>
                     <a class="btn btn-warning" href="{% url 'KITS:study_edit' pk=study.pk %}">Edit</a>
                     <a href="{% url 'KITS:study_archive' pk=study.pk %}"
                         onclick="return confirm('Are you sure you want to archive {{ study.pet_name }}?')"
