--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -30,6 +30,7 @@
             <tr class="bg-info">
                 <th>Kit</th>
                 <th>Quantity</th>
+                <th>Last to expire</th>
 
             </tr>
             </thead>
@@ -37,15 +38,19 @@
             {% for kit in kits %}
                 <tr>
                     <td>{{ kit.type_name }}</td>
-                    <td>{{ kit.id }}</td>
+                    <td>{{ kit.no_of_kits }}</td>
+                    <td>{{ kit.exp }}</td>
                 </tr>
 
-
+            {% endfor %}
             </tbody>
         </table>
-        <p>Kit Ordering: {{ qs }}</p>
-        <p>Requisition: </p>
-    {% endfor %}
+
+
+    <a href="" class="btn btn-success">Add more kit types</a>
+
+    <p>Kit Ordering: </p>
+    <p>Requisition: </p>
     </div>
 {% endblock %}
 
