--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -29,7 +29,8 @@
             <thead>
             <tr class="bg-info">
                 <th>Kit</th>
-                <th>Quantity</th>
+                <th>Available Kits</th>
+                <th>Expired Kits</th>
                 <th>Last to expire</th>
 
             </tr>
@@ -39,6 +40,7 @@
                 <tr>
                     <td>{{ kit.type_name }}</td>
                     <td>{{ kit.no_of_kits }}</td>
+                    <td></td>
                     <td>{{ kit.exp }}</td>
                 </tr>
 
