study detail update

--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -40,7 +40,7 @@
                 <tr>
                     <td>{{ kit.type_name }}</td>
                     <td>{{ kit.no_of_kits }}</td>
-                    <td></td>
+                    <td>{{ kit.no_of_kits_exp }}</td>
                     <td>{{ kit.exp }}</td>
                 </tr>
 
