--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -24,6 +24,7 @@
 
 
     <h3 style="padding-left: 15Px">Kit Information</h3>
+    <p style="padding-left: 15Px">Kit Location: </p>
 
         <table class="table table-striped table-bordered table-hover">
             <thead>
@@ -50,9 +51,9 @@
 
 
     <a href="" class="btn btn-success">Add more kit types</a>
-
-    <p>Kit Ordering: </p>
-    <p>Requisition: </p>
+    <hr>
+    <p>Kit Ordering: {{ kit_order }} </p>
+    <p>Requisition: {{ req }}</p>
     </div>
 {% endblock %}
 
