Check-in kits framework

--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -18,7 +18,7 @@
     <div class="topnav">
         <a href="{% url 'KITS:home' %}">Home</a>
         <a href="{% url 'KITS:study_list' %}">Studies</a>
-        <a href="{% url 'KITS:kit_checkin' %}">Check-In Kits</a>
+        <a href="{% url 'KITS:kit_list' %}">Check-In Kits</a>
         <a href="{% url 'KITS:home' %}">Check-Out Kits</a>
         <a href="{% url 'KITS:home' %}">Reports</a>
 
