--- a/templates/KITS/create_study.html
+++ b/templates/KITS/create_study.html
@@ -15,7 +15,7 @@
         <hr>
         <form method="POST" class="study-form">{% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Add test</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 {% endblock %}
