Check-in kits forms, list, modelling

--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -25,11 +25,11 @@
             </tr>
             </thead>
             <tbody>
-            {% for kits in kit %}
+            {% for kit in kit %}
             <tr>
                 <td>{{ kit.id }}</td>
                 <td>{{ kit.type_name }}</td>
-                <td>{{ kit.IRB_number_id }}</td>
+                <td>{{ kit.IRB_number }}</td>
                 <td>{{ kit.description }}</td>
                 <td>{{ kit.date_added }}</td>
             </tr>
