--- a/templates/KITS/study_archive.html
+++ b/templates/KITS/study_archive.html
@@ -6,7 +6,7 @@
     <form method="post">
         {% csrf_token %}
         <input type="submit" class="btn btn-danger" value="Archive">
-        <a href="{% url 'KITS:study_list' pk=study.id %}">Cancel</a>
+        <a href="{% url 'KITS:study_list' pk=study.pk %}">Cancel</a>
     </form>
 
 {% endblock %}
