--- a/templates/KITS/home.html
+++ b/templates/KITS/home.html
@@ -3,10 +3,45 @@
 
 {% extends 'KITS/base.html' %}
 {% block content %}
+
+    <style>
+        body{
+        background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url();
+        height: 100vh;
+        -webkit-background-size: cover;
+        background-size: cover;
+        background-position: center center;
+        position: relative;
+}
+        .welcome-text{
+            position: absolute;
+            width: 600px;
+            height: 300px;
+            margin: 20% 30%;
+            text-align: center;
+        }
+        .welcome-text h1{
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 60px;
+            color: #fff;
+        .welcome-text a{
+            border: 1px solid #fff;
+            padding: 10px 25px;
+            text-decoration: none;
+            font-size: 14px;
+            margin-top: 20px;
+            display: inline-block;
+            color: #fff;
+        }
+}
+    </style>
     <body>
-        <div>
+        <div class="welcome-text">
             <h1>Welcome to KITS!</h1>
+            <a href="">Login</a>
         </div>
+        {% load static %}
         <hr>
         {% if user.is_authenticated %}
         <div class="container">
