Added experimental navbar with test pages for consideration.

--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -21,6 +21,7 @@
         <a href="{% url 'KITS:kit_list' %}">Check-In Kits</a>
         <a href="{% url 'KITS:home' %}">Check-Out Kits</a>
         <a href="{% url 'KITS:home' %}">Reports</a>
+        <a href="{% url 'KITS:home2' %}">New Home (Test)</a>
 
         {# Tests for user authenticated to show appropriate login/logout link #}
         {% if user.is_authenticated %}
