--- a/templates/KITS/home2.html
+++ b/templates/KITS/home2.html
@@ -4,22 +4,23 @@
 {% extends 'KITS/base2.html' %}
 {% block content %}
     <body>
-        <div>
-            <h1>Welcome to KITS!</h1>
+        <div class="container-fluid">
+            <h1>Welcome to the Kit Inventory Tracking System.</h1>
         </div>
         <hr>
-        {% if user.is_authenticated %}
         <div class="container-fluid">
-            <p>
-                Experimental design for home page. This is up for consideration.
-            </p>
-            <p>
-                Currently, any link clicked on will return you to the original style site. You can click on
-                "New Home" to return to this design.
-            </p>
-        </div>
+        {% if user.is_authenticated %}
+            <p><strong>If you can see this sentence, you're logged in!</strong></p>
         {% else %}
         {% endif %}
+        <p>
+            Experimental design for home page. This is up for consideration.
+        </p>
+        <p>
+            Currently, any link clicked on will return you to the original style site. You can click on
+            "New Home" to return to this design.
+        </p>
+        </div>
     </body>
 {% endblock content %}
 
