--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,7 +14,7 @@
       <p>Your account doesn't have access to this page. To proceed,
       please login with an account that has access.</p>
     {% else %}
-      <p>Please login to see this page.</p>
+      <p>Please login to access this website.</p>
     {% endif %}
   {% endif %}
 
