--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -13,6 +13,10 @@
     <div class="box">
         <H1><b style="font-size: .75em;">Kits</b></H1>
         <hr>
+         <form method="get">
+           {{ myFilter.form }}
+            <button class="btn btn-primary" type="submit">Search</button>
+        </form>
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
@@ -35,13 +39,16 @@
                 <td>{{ kit.IRB_number }}</td>
                 <td>{{ kit.description }}</td>
                 <td>{{ kit.date_added }}</td>
-                <td><a href="{% url 'KITS:kit_edit' pk=kit.pk%}" class="btn btn-warning">Edit</a></td>
-
+                <td><a href="{% url 'KITS:kit_edit' pk=kit.pk%}" class="btn btn-warning">Edit</a>
+                <a href="{% url 'KITS:kit_delete' pk=kit.pk%}"
+                    onclick="return confirm('Are you sure you want to delete Kit {{ kit.id }} under IRB#{{ kit.IRB_number }}? Do you have proper authorization?')"
+                       class="btn btn-warning">Delete</a></td>
             </tr>
              {% endfor %}
             </tbody>
         </table>
         <a href="{% url 'KITS:kit_checkin' %}" class="btn btn-success">Check-in Kit</a>
+
     </div>
 {% endblock %}
 </html>
