--- a/templates/KITS/kitinstance.html
+++ b/templates/KITS/kitinstance.html
@@ -29,16 +29,17 @@
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
-                <th>Kit</th>
-                <th>Available Kits</th>
-                <th>Expired Kits</th>
-                <th>Last to expire</th>
+                <th>Location</th>
+                <th>Expiration Date</th>
+                <th>Status</th>
+                <th>Notes</th>
 
             </tr>
             </thead>
             <tbody>
-            {% for kit in kits %}
+            {% for kits in kitinstances %}
                 <tr>
+                    <td>{{ kitinstance.id}}</td>
                     <td>{{ kitinstance.expiration_date }}</td>
                     <td>{{ kitinstance.status }}</td>
                     <td>{{ kitinstance.note }}</td>
@@ -49,7 +50,7 @@
         </table>
 
 
-    <a href="" class="btn btn-success">Add Kit Instance</a>
+    <a href="{% url 'KITS:kitinstance' %}" class="btn btn-success">Add Kit Instance</a>
     <hr>
 
     </div>
