--- a/templates/KITS/kit_edit.html
+++ b/templates/KITS/kit_edit.html
@@ -4,7 +4,7 @@
 {% extends 'KITS/base.html' %}
 
 {% block content %}
-    <h1>Edit Kit</h1>
+    <h1>Edit Kit Type</h1>
     <form method="POST" class="">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-success">Update</button>
