--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -21,11 +21,9 @@
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
-                <th>ID</th>
-                <th>Type</th>
-                <th>IRB_Number</th>
-                <th>Description</th>
-                <th>Date Added</th>
+                <th>IRB_number</th>
+                <th>Name of Kit</th>
+
                 <th colspan="5">Actions</th>
 
 
@@ -35,22 +33,21 @@
             <tbody>
             {% for kit in kit %}
             <tr>
-                <td>{{ kit.id }}</td>
-                <td>{{ kit.type_name }}</td>
                 <td>{{ kit.IRB_number }}</td>
-                <td>{{ kit.description }}</td>
-                <td>{{ kit.date_added }}</td>
+                <td>{{ kit.type_name }}</td>
+
 
                 <td><a href="{% url 'KITS:kit_edit' pk=kit.pk%}" class="btn btn-warning">Edit</a>
                 <a href="{% url 'KITS:kit_delete' pk=kit.pk%}"
                     onclick="return confirm('Are you sure you want to delete Kit {{ kit.id }} under IRB#{{ kit.IRB_number }}? Do you have proper authorization?')"
                        class="btn btn-warning">Delete</a>
-                <a href="{% url 'KITS:kitinstance' %}" class="btn btn-warning">Add Kit Instance</a></td>
+                <a href="{% url 'KITS:kit_addkitinstance' pk=kit.pk %}" class="btn btn-warning">Add Kit Instance</a></td>
+
             </tr>
              {% endfor %}
             </tbody>
         </table>
-        <a href="{% url 'KITS:kit_checkin' %}" class="btn btn-success">Check-in Kit</a>
+        <a href="{% url 'KITS:kit_addkittype' %}" class="btn btn-success">Add Kit Type</a>
 
     </div>
 {% endblock %}
