--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -50,7 +50,7 @@
         </table>
 
 
-    <a href="" class="btn btn-success">Add more kit types</a>
+    <a href="{% url 'KITS:kit_addkittype' %}" class="btn btn-success">Add Kit Type</a>
     <hr>
     <p>Kit Ordering: {{ kit_order }} </p>
     <p>Requisition: {{ req }}</p>
