reports about expired kits

--- a/templates/KITS/report.html
+++ b/templates/KITS/report.html
@@ -15,7 +15,7 @@
         <hr>
 
 
-    <a href="{%  url 'KITS:report_expiredkits' %}" class="btn btn-success">Report about expired kits</a>
+    <a href="{%  url 'KITS:report_expiredkits' %}" class="btn btn-success">Review reports about expired kits</a>
     </div>
 {% endblock %}
 
