--- a/templates/KITS/report_expiredkits.html
+++ b/templates/KITS/report_expiredkits.html
@@ -11,9 +11,9 @@
 }
     </style>
     <div class="box">
-        <H1><b style="font-size: .75em;">Expired Kits Reports </b></H1>
+        <H1><b style="font-size: .75em;">Reports about expired kits > All expired kits</b></H1>
 
-
+        <a href="{% url 'KITS:report_expiredkits_studies' %}" class="btn btn-success">Review a list of studies with expired kits</a>
 
 
     <hr>
