--- a/templates/KITS/study_edit.html
+++ b/templates/KITS/study_edit.html
@@ -4,10 +4,24 @@
 {% extends 'KITS/base.html' %}
 
 {% block content %}
+
+    <style>
+    .box {
+    margin: 8px;
+    border: 1px solid silver;
+    padding: 8px;
+    border-radius: 4px;
+}
+    </style>
+
+    <div class="box">
+
     <h1>Edit Study</h1>
     <form method="POST" class="">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-success">Update</button>
     </form>
+    </div>
 {% endblock %}
+
 </html>
