expired kits report

--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -12,7 +12,7 @@
     </style>
 
     <div class="box">
-        <H1><b style="font-size: .75em;">Kits</b></H1>
+        <H1><b style="font-size: .75em;">Check-In Kits</b></H1>
         <hr>
          <form method="get">
            {{ myFilter.form }}
