--- a/templates/KITS/report.html
+++ b/templates/KITS/report.html
@@ -14,8 +14,10 @@
         <H1><b style="font-size: .75em;">Reports</b></H1>
         <hr>
 
+        <H2>Expired Kits</H2>
+    <a href="{%  url 'KITS:report_expiredkits' %}" class="btn btn-success">List of all expired kits</a>
+    <a href="{%  url 'KITS:report_expiredkits_studies' %}" class="btn btn-success">List of studies with expired kits</a>
 
-    <a href="{%  url 'KITS:report_expiredkits' %}" class="btn btn-success">Review reports about expired kits</a>
     </div>
 {% endblock %}
 
