--- a/templates/KITS/report_expiredkits_studies.html
+++ b/templates/KITS/report_expiredkits_studies.html
@@ -11,7 +11,7 @@
 }
     </style>
     <div class="box">
-        <H1><b style="font-size: .75em;">Reports about expired kits > All expired kits > Studies with expired kits</b></H1>
+        <H1><b style="font-size: .75em;">Reports > All studies with expired kits </b></H1>
 
     <hr>
     <table class="table table-striped table-bordered table-hover">
@@ -35,7 +35,7 @@
             {% endfor %}
             </tbody>
         </table>
-
+        <a href="" class="btn btn-success">Export report</a>
 
 
     </div>
