Added partial functionality for adding and editing requisition sheet information

--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -33,7 +33,7 @@
                 <th>Available Kits</th>
                 <th>Expired Kits</th>
                 <th>Last to expire</th>
-
+                <th>Requisition</th>
             </tr>
             </thead>
             <tbody>
@@ -43,6 +43,7 @@
                     <td>{{ kit.no_of_kits }}</td>
                     <td>{{ kit.no_of_kits_exp }}</td>
                     <td>{{ kit.exp }}</td>
+                    <td>{{ new_req.description }}</td>
                 </tr>
 
             {% endfor %}
@@ -53,7 +54,9 @@
     <a href="{% url 'KITS:kit_addkittype' %}" class="btn btn-success">Add Kit Type</a>
     <hr>
     <p>Kit Ordering: {{ kit_order }} </p>
-    <p>Requisition: {{ req }}</p>
+    <p>Requisition: </p>
+    <a href="{% url 'KITS:create_req' pk=study.pk %}" class="btn btn-success">Add Requisition Info</a>
+    <a class="btn btn-warning" href="{% url 'KITS:req_edit' pk=study.pk %}">Edit Requisition Info</a>
     </div>
 {% endblock %}
 
