--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -6,25 +6,25 @@
     .box {
     margin: 8px;
     border: 1px solid silver;
-    padding: 8px;
+    padding: 10px;
+    padding-bottom:100px;
     border-radius: 4px;
 }
+    .column {
+        float: left;
+        width: 50%;
+        border-right: 1px;
+    }
     </style>
     <div class="box">
     <H1><b style="font-size: .75em;">Study: {{ study }} {{ study.pet_name }}</b></H1>
     <hr>
 
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-                <tr class="bg-info">
-                    <th>Status: {{ study.status }}</th>
-                </tr>
-            </thead>
-        </table>
+    <p>Status: {{ study.status }}</p>
+    <p>Sponsor: {{ study.sponsor_name }}</p>
 
-
-    <h3 style="padding-left: 15Px">Kit Information</h3>
-    <p style="padding-left: 15Px">Kit Location: </p>
+    <hr>
+    <h3>Kit Inventory</h3>
 
         <table class="table table-striped table-bordered table-hover">
             <thead>
@@ -49,26 +49,32 @@
             {% endfor %}
             </tbody>
         </table>
+    <p><b>Kit Stored:</b> </p>
+            <a href="{% url 'KITS:kit_location' pk=study.pk %}" class="btn btn-success">Edit kit location</a>
 
 
     <hr>
 
-
+    <div class="column">
     {% if test == 'True' %}
-        <p>Kit Ordering: {{ kit_order }} </p>
+        <h3>Kit Ordering </h3>
+        <p> {{ kit_order }} </p>
         <a href="{% url 'KITS:kit_ordering' pk=study.pk %}" class="btn btn-success">Edit kit ordering details</a>
     {% elif test == 'False' %}
         <p>{{ kit_order }}</p>
         <a href="{% url 'KITS:kit_ordering_add' pk=study.pk %}" class="btn btn-success">Add Kit Ordering Info</a>
 
     {% endif %}
+    </div>
 
-    <hr>
-
-    <p>Requisition: </p>
+    <h3>Requisition: </h3>
     <a href="{% url 'KITS:create_req' pk=study.pk %}" class="btn btn-success">Add Requisition Info</a>
     <a class="btn btn-warning" href="{% url 'KITS:req_edit' pk=study.pk %}">Edit Requisition Info</a>
-    </div>
+
+
+
 {% endblock %}
+
+    </div>
 
 </html>
