edit kit from study details page

--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -48,6 +48,8 @@
             </tbody>
         </table>
         <a href="{% url 'KITS:kit_addkittype' %}" class="btn btn-success">Add Kit Type</a>
+        <a href="{% url 'KITS:kit_addlocation' %}" class="btn btn-success">Add Location</a>
+
 
     </div>
 {% endblock %}
